# ultima_poker

./: .gitignore  .gitmodules  config_qmake_all.pri  getdeps.sh  ultima_poker.pro
EMailSender/: EMailSender.pro  emailsender.cpp  emailsender.h
SMTPEmail/: SMTPEmail.pro
SMTPEmail/src/: smtpclient.cpp  smtpclient.h
animation/: animation.pro
animation/animation/: animation.cpp  animation.h  animation.pro  animation_global.h  rotatedwidget.cpp  rotatedwidget.h
animation/demo/: demo.pro  form.cpp  form.h  form.ui  main.cpp  plugins.h  res.qrc
api_models/: api_models.pro
api_models/api_models/: algorithm.cpp  algorithm.hpp  api_models.cpp  api_models.hpp  api_models.pri  api_models.pro  api_models_global.h  api_table_types.hpp  api_util.cpp  api_util.hpp  defs.hpp  defs_metatype.hpp  gbp_registrator.hpp  helper_get_set_data.cpp  helper_get_set_data.hpp  icons.qrc  itemtype_concept.cpp  itemtype_concept.hpp  macro_table_state.hpp  model_apibase.cpp  model_apibase.hpp  model_cash_stat_t.cpp  model_cash_stat_t.hpp  model_io.cpp  model_io.hpp  model_log.cpp  model_log.h  model_table_state_t.cpp  model_table_state_t.hpp  model_tourn_additional_stat_t.cpp  model_tourn_additional_stat_t.hpp  model_tournament_stat_t.cpp  model_tournament_stat_t.hpp  model_tournament_user_info_t.cpp  model_tournament_user_info_t.h  model_transformproxy.cpp  model_transformproxy.h  model_user_info_t.cpp  model_user_info_t.hpp  model_vip_system_info.cpp  (+7 more)
api_models/demo/: demo.pro  form.cpp  form.h  form.ui  main.cpp  plugins.h
api_models/demo_table_state/: demo_table_state.pro  main.cpp  tablestatedemo.cpp  tablestatedemo.h  tablestatedemo.ui
api_models/demo_tourn_additional_stat_t/: demo_tourn_additional_stat_t.pro  main.cpp  widget.cpp  widget.h  widget.ui
basewidgets/: basewidgets.pro
basewidgets/basewidgets/: basewidgets.pro  basewidgets_global.h  clockwidget.cpp  (+30 more)
common/: api.pri  netio.pri
common/netio/examples/asio-client-skeleton/: CMakeLists.txt  api.hpp  client.cpp  client.hpp  main.cpp
common/netio/examples/asio-timer/: CMakeLists.txt  main.cpp
common/netio/examples/local-invoke/: CMakeLists.txt  main.cpp
common/netio/examples/unpack-packet/: CMakeLists.txt  main.cpp
gui/: gui.pro
plugins/: plugins.h  plugins.pro  pluginsData.db
poker_client/: common.txt  plugins.h  poker_client.pro  serverRequests.dlog  testform.cpp  testform.h  testform.ui
resources/: default_resources.db
sublime-project/: .clang_complete
tools/: tools.pro
(+738 files in other folders)
